--- a/src/layouts/receipt.fxml
+++ b/src/layouts/receipt.fxml
@@ -8,21 +8,21 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="422.0" prefWidth="549.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ReceiptController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="507.0" prefWidth="653.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ReceiptController">
    <children>
-      <Button layoutX="379.0" layoutY="116.0" mnemonicParsing="false" onAction="#print" prefHeight="69.0" prefWidth="143.0" text="Skriv ut kvitto" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="116.0">
+      <Button mnemonicParsing="false" onAction="#print" prefHeight="69.0" prefWidth="143.0" text="Skriv ut kvitto" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
-      <Button layoutX="360.0" layoutY="320.0" mnemonicParsing="false" onAction="#saveShoppingList" prefHeight="69.0" prefWidth="143.0" text="Spara inköpslista" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="45.0">
+      <Button layoutX="392.0" layoutY="339.0" mnemonicParsing="false" onAction="#saveShoppingList" prefHeight="69.0" prefWidth="143.0" text="Spara inköpslista" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="15.0">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
-      <AnchorPane layoutX="91.0" layoutY="66.0" maxHeight="1.7976931348623157E308" prefHeight="500.0" prefWidth="253.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="218.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="91.0" layoutY="28.0" maxHeight="1.7976931348623157E308" prefHeight="472.0" prefWidth="613.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox maxHeight="1.7976931348623157E308" prefHeight="200.0" prefWidth="211.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <VBox layoutY="51.0" maxHeight="1.7976931348623157E308" prefHeight="386.0" prefWidth="613.0" AnchorPane.bottomAnchor="63.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <HBox alignment="CENTER" prefHeight="43.0" prefWidth="255.0">
                      <children>
@@ -42,7 +42,7 @@
                         </Label>
                      </children>
                   </HBox>
-                  <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0">
+                  <HBox prefHeight="40.0" prefWidth="613.0" spacing="5.0">
                      <children>
                         <Label text="Datum:">
                            <font>
@@ -56,7 +56,7 @@
                         </Label>
                      </children>
                   </HBox>
-                  <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0">
+                  <HBox prefHeight="40.0" prefWidth="613.0" spacing="5.0">
                      <children>
                         <Label text="Tid:">
                            <font>
@@ -70,8 +70,8 @@
                         </Label>
                      </children>
                   </HBox>
-                  <ListView fx:id="receiptList" maxHeight="1.7976931348623157E308" maxWidth="400.0" prefHeight="500.0" prefWidth="253.0" />
-                  <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0">
+                  <ListView fx:id="receiptList" maxHeight="1.7976931348623157E308" maxWidth="618.0" prefHeight="200.0" prefWidth="618.0" />
+                  <HBox prefHeight="40.0" prefWidth="613.0" spacing="5.0">
                      <children>
                         <Label text="Summa:">
                            <font>
