--- a/src/layouts/main_window.fxml
+++ b/src/layouts/main_window.fxml
@@ -110,25 +110,20 @@
                      </graphic>
                   </Button>
                   <Pane fx:id="shadow1" layoutX="30.0" layoutY="30.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#shadowClicked" opacity="0.5" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: black;" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <Button fx:id="backButton" mnemonicParsing="false" onAction="#backPressed" prefHeight="60.0" prefWidth="160.0" styleClass="ImageButton" stylesheets="@style.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
-                     <graphic>
-                        <StackPane prefHeight="150.0" prefWidth="200.0">
-                           <children>
-                              <ImageView fitHeight="71.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../resources/img/previousArrow.png" />
-                                 </image>
-                              </ImageView>
-                              <Label id="backButtonLabel" fx:id="previousLabel">
-                                 <font>
-                                    <Font size="36.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </StackPane>
-                     </graphic>
-                  </Button>
-                  <Button fx:id="nextButton" mnemonicParsing="false" onAction="#nextPressed" prefHeight="60.0" prefWidth="160.0" styleClass="ImageButton" stylesheets="@style.css" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                  <StackPane layoutX="201.0" layoutY="250.0" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0">
+                     <children>
+                        <fx:include fx:id="productGrid" source="product_grid.fxml" />
+                        <fx:include fx:id="startPage" source="first_page.fxml" />
+                        <Pane fx:id="shadow2" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#shadowClicked" opacity="0.5" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: black;" visible="false" />
+                        <fx:include fx:id="lightbox" source="lightbox.fxml" />
+                     </children>
+                  </StackPane>
+                  <Pane fx:id="lightBoxHelpPane" layoutX="30.0" prefHeight="101.0" prefWidth="560.0" style="-fx-background-color: white; -fx-border-color: black;" visible="false" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
+                     <children>
+                        <Pane layoutX="1.0" layoutY="-1.0" prefHeight="25.0" style="-fx-background-color: white;" />
+                     </children>
+                  </Pane>
+                  <Button fx:id="nextButton" layoutX="396.0" layoutY="679.0" mnemonicParsing="false" onAction="#nextPressed" prefHeight="60.0" prefWidth="160.0" styleClass="ImageButton" stylesheets="@style.css" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="42.0">
                      <graphic>
                         <StackPane prefHeight="150.0" prefWidth="200.0">
                            <children>
@@ -146,14 +141,24 @@
                         </StackPane>
                      </graphic>
                   </Button>
-                  <StackPane layoutX="201.0" layoutY="250.0" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="70.0">
-                     <children>
-                        <fx:include fx:id="productGrid" source="product_grid.fxml" />
-                        <Pane fx:id="shadow2" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#shadowClicked" opacity="0.5" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: black;" visible="false" />
-                        <fx:include fx:id="lightbox" source="lightbox.fxml" />
-                        <fx:include fx:id="startPage" source="first_page.fxml"/>
-                     </children>
-                  </StackPane>
+                  <Button fx:id="backButton" mnemonicParsing="false" onAction="#backPressed" prefHeight="60.0" prefWidth="160.0" styleClass="ImageButton" stylesheets="@style.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="42.0">
+                     <graphic>
+                        <StackPane prefHeight="150.0" prefWidth="200.0">
+                           <children>
+                              <ImageView fitHeight="71.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../resources/img/previousArrow.png" />
+                                 </image>
+                              </ImageView>
+                              <Label id="backButtonLabel" fx:id="previousLabel">
+                                 <font>
+                                    <Font size="36.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </StackPane>
+                     </graphic>
+                  </Button>
                </children>
             </AnchorPane>
          </center>
