--- a/src/layouts/product_element_checkout.fxml
+++ b/src/layouts/product_element_checkout.fxml
@@ -2,18 +2,16 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Group?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="473.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="473.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="164.5" minWidth="10.0" prefWidth="158.5" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.0" minWidth="10.0" prefWidth="119.5" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="213.0" minWidth="10.0" prefWidth="213.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.0" minWidth="10.0" prefWidth="72.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="108.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="103.0" minWidth="10.0" prefWidth="74.0" />
    </columnConstraints>
@@ -23,7 +21,7 @@
    <children>
       <Label fx:id="productName" text="Varunamn">
          <font>
-            <Font size="22.0" />
+            <Font size="20.0" />
          </font>
       </Label>
       <Label fx:id="pricePerUnit" text="999 kr/kg" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
@@ -42,21 +40,11 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Group GridPane.columnIndex="1" GridPane.halignment="CENTER">
-         <children>
-            <Button maxHeight="28.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemove" prefHeight="28.0" prefWidth="37.0" text="-">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font></Button>
-            <TextField fx:id="amountTF" alignment="CENTER" layoutX="40.0" onAction="#valueChanged" prefHeight="33.0" prefWidth="40.0">
-               <font>
-                  <Font size="15.0" />
-               </font></TextField>
-            <Button fx:id="addButton" layoutX="83.0" maxHeight="28.0" maxWidth="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAdd" prefHeight="28.0" prefWidth="37.0" text="+">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font></Button>
-         </children>
-      </Group>
+      <Group GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+      <Label fx:id="amountLabel" alignment="CENTER" contentDisplay="CENTER" text="5 st" GridPane.columnIndex="1">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
    </children>
 </GridPane>
