--- a/src/ListCells/saved_carts_elements.fxml
+++ b/src/ListCells/saved_carts_elements.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
@@ -12,7 +19,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="32.0" prefWidth="348.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="40.0" prefWidth="348.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.5" minWidth="10.0" prefWidth="122.0" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.0" minWidth="10.0" prefWidth="30.0" />
@@ -61,19 +68,22 @@
                         <Font name="System Bold" size="16.0" />
                     </font>
                 </Label>
-            <Button mnemonicParsing="false">
+            <Button fx:id="addToCartButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="26.0">
                <graphic>
-                  <ImageView fitHeight="27.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="22.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../resources/img/Shopping-Cart-icon.png" />
                      </image>
                   </ImageView>
                </graphic>
             </Button>
-                <Button fx:id="removeButton" minWidth="0.0" mnemonicParsing="false" prefWidth="25.0" style="-fx-background-color: red;" text="X" textFill="WHITE">
+                <Button fx:id="removeButton" minWidth="0.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="36.0" style="-fx-background-color: red;" text="X" textFill="WHITE">
                     <cursor>
                         <Cursor fx:constant="HAND" />
                     </cursor>
+               <font>
+                  <Font size="12.0" />
+               </font>
                 </Button>
             </children>
             <padding>
