--- a/src/layouts/main_window.fxml
+++ b/src/layouts/main_window.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -16,7 +21,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="674.0" prefWidth="1004.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.IMatController">
+<AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="674.0" prefWidth="1004.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.IMatController">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <left>
@@ -118,7 +123,7 @@
                         <fx:include fx:id="lightbox" source="lightbox.fxml" />
                      </children>
                   </StackPane>
-                  <Pane fx:id="lightBoxHelpPane" layoutX="30.0" prefHeight="101.0" prefWidth="560.0" style="-fx-background-color: white; -fx-border-color: black;" visible="false" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
+                  <Pane fx:id="lightBoxHelpPane" layoutX="30.0" prefHeight="101.0" prefWidth="560.0" style="-fx-background-color: white; -fx-border-color: black;" visible="false" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
                      <children>
                         <Pane layoutX="1.0" layoutY="-1.0" prefHeight="25.0" style="-fx-background-color: white;" />
                      </children>
