--- a/src/layouts/style.css
+++ b/src/layouts/style.css
@@ -2,15 +2,15 @@
     /* -fx-background-color: linear-gradient(#F2F2EF, #f2ede1); */
     /* -fx-background-color: linear-gradient(#CDFFD7, #F2EDE1); */
     /* -fx-background-color: #CDFFD7; */
-    -fx-background-color: #E2FFD7;
+    -fx-background-color: #f4fff1;
 }
 .button {
     /* -fx-background-color: #44B25A; */
     /* -fx-background-color: #72B29E; */
-    -fx-background-color: linear-gradient(#72B29E, #588A7A);
+    -fx-background-color: linear-gradient(#8bd2bb, #78BAA5);
     -fx-background-radius: 15px;
     -fx-font: bold 14px "Arial";
-    -fx-effect: dropshadow(gaussian, silver, 2, 0.3, 1px, 1px);
+    -fx-effect: dropshadow(gaussian, silver, 2, 0.3, 1, 1);
     /*
     -fx-border-radius: 20px;
     -fx-border-color: red;
@@ -21,23 +21,23 @@
 .button:hover {
     /* -fx-background-color: #7BFF95; */
     /* -fx-background-color: #90E0C7; */
-    -fx-background-color: linear-gradient(#90E0C7, #78BAA5);
+    -fx-background-color: linear-gradient(#8bd2bb, #78BAA5);
     -fx-effect: dropshadow(gaussian, #808080, 10, 0.2, 0, 0);
 }
 .button:pressed {
-    -fx-background-color: linear-gradient(#78BAA5, #90E0C7);
+    -fx-background-color: linear-gradient(#78BAA5, #8bd2bb);
     /* -fx-background-color: linear-gradient(#93EBC5, #72B29E, #93EBC5); */
     /* -fx-background-color: linear-gradient(#7BFF95, #49E564, #7BFF95); */
 }
 .toggle-button {
-    -fx-background-color: linear-gradient(#72B29E, #588A7A);
-    -fx-effect: dropshadow(gaussian, silver, 2, 0.3, 1px, 1px);
+    -fx-background-color: linear-gradient(#8bd2bb, #78BAA5);
+    -fx-effect: dropshadow(gaussian, silver, 2, 0.3, 1, 1);
     /* -fx-background-color: #72B29E; */
     -fx-background-radius: 15px;
     -fx-font: bold 14px "Arial";
 }
-.toggle-button: selected {
-    -fx-background-color: linear-gradient(#629988, #69A391);
+.toggle-button:selected {
+    -fx-background-color: linear-gradient(#78BAA5, #8bd2bb);
     /* -fx-background-color: linear-gradient(#93EBC5, #72B29E, #93EBC5); */
     -fx-border-color: #459EA8;
     -fx-border-width: 5px;
@@ -47,7 +47,7 @@
     -fx-background-color: rgba(0,0,0,0);
     -fx-background-radius: 15px;
     -fx-font: bold 14px "Arial";
-    -fx-effect: dropshadow(gaussian, silver, 2, 0.3, 1px, 1px);
+    -fx-effect: dropshadow(gaussian, silver, 2, 0.3, 1, 1);
 }
 .list-cell:empty{
     -fx-pref-height: 0px;
@@ -56,13 +56,13 @@
 .titled-pane {
 }
 .titled-pane > .title {
-    -fx-background-color: linear-gradient(#A0FFD6, #93EBC5);
+    -fx-background-color: linear-gradient(#91e8cc, #a2ebcc);
     /* -fx-font: bold 16px "Arial"; */
     -fx-background-radius: 2px;
     -fx-border-radius: 2px;
     -fx-background-insets: 1px;
 }
-.titled-pane: focused{
+.titled-pane:focused{
     -fx-font: bold 16px "Arial";
     /* -fx-background-color: #93EBC5; */
 }
@@ -95,13 +95,13 @@
 #backButtonLabel {
     -fx-font: bold 14px "Arial";
 }
-#nextButton: hover {
+#nextButton:hover {
     -fx-background-color: transparent;
 }
-#backButton: hover {
+#backButton:hover {
     -fx-background-color: transparent;
 }
-#addToCarT_ItemButton: pressed {
+#addToCarT_ItemButton:pressed {
 }
 #productElement_GP {
     -fx-border-color: silver;
