--- a/src/layouts/account.fxml
+++ b/src/layouts/account.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -20,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AccountController">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="443.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AccountController">
     <children>
         <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="77.0" prefWidth="600.0" style="-fx-background-color: #CCCCCC;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <center>
@@ -96,16 +90,25 @@
                      <font>
                         <Font size="18.0" />
                      </font>
+                     <GridPane.margin>
+                        <Insets right="2.0" />
+                     </GridPane.margin>
                   </TextField>
-                  <TextField fx:id="secondFour" minWidth="77.0" onAction="#saveText" prefHeight="39.0" prefWidth="77.0" promptText="1234" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="3">
+                  <TextField fx:id="secondFour" minWidth="67.0" onAction="#saveText" prefHeight="39.0" prefWidth="124.0" promptText="1234" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="3">
                      <font>
                         <Font size="18.0" />
                      </font>
+                     <GridPane.margin>
+                        <Insets right="2.0" />
+                     </GridPane.margin>
                   </TextField>
                   <TextField fx:id="thirdFour" onAction="#saveText" prefHeight="39.0" prefWidth="77.0" promptText="1234" GridPane.columnIndex="4" GridPane.rowIndex="3">
                      <font>
                         <Font size="18.0" />
                      </font>
+                     <GridPane.margin>
+                        <Insets right="2.0" />
+                     </GridPane.margin>
                   </TextField>
                   <TextField fx:id="lastFour" onAction="#saveText" prefHeight="39.0" prefWidth="77.0" promptText="1234" GridPane.columnIndex="5" GridPane.rowIndex="3">
                      <font>
@@ -133,8 +136,14 @@
                         <Insets right="5.0" />
                      </padding>
                   </Label>
-                  <ComboBox fx:id="monthExp" maxWidth="1.7976931348623157E308" onAction="#saveText" prefHeight="32.0" prefWidth="40.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <ComboBox fx:id="yearExp" maxWidth="1.7976931348623157E308" onAction="#saveText" prefHeight="32.0" prefWidth="0.0" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+                  <ComboBox fx:id="monthExp" maxWidth="1.7976931348623157E308" onAction="#saveText" prefHeight="32.0" prefWidth="40.0" promptText="MM" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                     <GridPane.margin>
+                        <Insets right="1.0" />
+                     </GridPane.margin></ComboBox>
+                  <ComboBox fx:id="yearExp" maxWidth="1.7976931348623157E308" onAction="#saveText" prefHeight="32.0" prefWidth="0.0" promptText="ÅÅ" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="5">
+                     <GridPane.margin>
+                        <Insets left="1.0" />
+                     </GridPane.margin></ComboBox>
                   <TextField fx:id="cvcTF" onAction="#saveText" prefHeight="39.0" prefWidth="77.0" promptText="1234" GridPane.columnIndex="5" GridPane.rowIndex="5">
                      <font>
                         <Font size="18.0" />
