--- a/src/ListCells/product_element.fxml
+++ b/src/ListCells/product_element.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -14,11 +20,11 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="productElement_GP" fx:id="backgroundPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="280.0" styleClass="product-pane" stylesheets="@../layouts/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="productElement_GP" fx:id="backgroundPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="320.0" styleClass="product-pane" stylesheets="@../layouts/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <GridPane alignment="TOP_RIGHT" layoutX="192.0" layoutY="89.0" prefHeight="311.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="127.0" minWidth="10.0" prefWidth="106.5" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="127.0" minWidth="10.0" prefWidth="120.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="113.5" minWidth="10.0" prefWidth="14.5" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.5" minWidth="10.0" prefWidth="88.5" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.5" minWidth="10.0" prefWidth="91.5" />
@@ -36,12 +42,12 @@
                   <Image url="@../../../DAT216-LAB/Lab2/RecipeSearch/src/resources/laxpaket-med-fankal-och-spenat.jpg" />
                </image>
             </ImageView>
-            <Label alignment="CENTER" prefHeight="25.0" prefWidth="51.0" text="Antal" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+            <Label fx:id="productUnitType" alignment="CENTER" prefHeight="25.0" prefWidth="51.0" text="Antal" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <HBox alignment="CENTER" prefHeight="42.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP">
+            <HBox alignment="CENTER" prefHeight="37.0" prefWidth="113.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP">
                <children>
                   <Button fx:id="removeAmount" alignment="CENTER" mnemonicParsing="false" prefHeight="0.0" prefWidth="26.0" text="-">
                      <HBox.margin>
@@ -51,7 +57,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <TextField fx:id="amountField" alignment="CENTER" prefHeight="35.0" prefWidth="40.0" text="1">
+                  <TextField fx:id="amountField" alignment="CENTER" prefHeight="35.0" prefWidth="50.0" text="1">
                      <HBox.margin>
                         <Insets left="2.0" right="2.0" />
                      </HBox.margin>
